# shade-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: pyproject.toml
api/src/shade_api/: __init__.py  app.py  parking.py  ratelimit.py  registry.py  routes.py  schemas.py  settings.py
cities/: cordoba.yaml
cities/cordoba/: parking.geojson
core/: pyproject.toml
core/src/shade_core/: __init__.py  artifacts.py  config.py  db.py  horizon.py  shade.py  solar.py
deploy/: deploy.sh  shade.caddy
docs/: adding-a-city.md  plan.md  shade-engine-mvp.md  validacion-cordoba-puntos.csv  validacion-cordoba.md
docs/learning/: canopy-sieve.md  cog.md  crs.md  dsm-dtm-chm.md  geojson.md  horizon-algorithm.md  lidar.md  map-tiles-pmtiles.md  pnoa-cnig.md  postgis.md  solar-geometry.md  timezones-api.md  web-mercator.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_create_parking_zones.py
pipeline/: pyproject.toml
pipeline/src/shade_pipeline/: __init__.py  build.py  canopy.py  cli.py  cnig.py  cog.py  grid.py  horizon.py  layers.py  predict.py  progress.py  rasterize.py  shade_raster.py  sources.py  tiles.py
scripts/: parse_cordoba_parking.py
tests/: conftest.py  laz_fixture.py  synthetic.py  test_api_cities.py  test_api_limits.py  test_api_parking.py  test_api_shade.py  test_api_timeline.py  test_artifacts_loader.py  test_cities_parking_layer.py  test_city_config.py  test_db_schema.py  test_horizon.py  test_pipeline_canopy.py  test_pipeline_cnig.py  test_pipeline_cog.py  test_pipeline_e2e.py  test_pipeline_horizon.py  test_pipeline_import_layer.py  test_pipeline_predict.py  test_pipeline_progress.py  test_pipeline_rasterize.py  test_pipeline_sources.py  test_pipeline_tiles.py  test_scene_reader.py  test_shade_classes.py  test_shade_golden.py  test_solar.py  test_timeline.py
