[project]
name = "shade-engine"
version = "0.0.0"
description = "Workspace root for the shade-engine monorepo"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["core", "pipeline", "api"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.9",
    "types-pyyaml>=6",
]

[tool.ruff]
line-length = 100
src = ["core/src", "pipeline/src", "api/src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["core/src", "pipeline/src", "api/src", "tests"]
mypy_path = ["core/src", "pipeline/src", "api/src", "tests"]
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pvlib.*", "pandas.*", "laspy.*", "rasterio.*", "affine.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
