[project]
name = "shade-api"
version = "0.1.0"
description = "Public FastAPI service reading precomputed shade artifacts"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "limits>=5",
    "pydantic-settings>=2.6",
    "pyproj>=3.7.2",
    "shade-core",
    "uvicorn>=0.35",
]

[tool.uv.sources]
shade-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
