[project]
name = "shade-core"
version = "0.1.0"
description = "Shared domain: solar geometry, horizon queries and city configuration"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2",
    "pvlib>=0.15",
    "pydantic>=2.11",
    "rasterio>=1.5",
    "pyyaml>=6",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
