[project]
name = "shade-core"
version = "0.1.0"
description = "Shared domain: solar geometry, horizon queries and city configuration"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2",
    "pvlib>=0.15",
    "pydantic>=2.11",
    "rasterio>=1.5",
    "pyyaml>=6",
]

# Base shade-core stays database-free (the shade engine reads COGs, never
# Postgres). Consumers that persist vector layers opt into the extra.
[project.optional-dependencies]
db = [
    "geoalchemy2>=0.18",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
