[project]
name = "shade-pipeline"
version = "0.1.0"
description = "Offline CLI that turns LiDAR into per-city raster artifacts (DSM, DTM, horizon)"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "laspy[lazrs]>=2.5",
    "numpy>=2",
    "pyproj>=3.7.2",
    "rasterio>=1.5",
    "shade-core[db]",
    "shapely>=2.1",
    "typer>=0.15",
]

[project.scripts]
shade-engine = "shade_pipeline.cli:app"

[tool.uv.sources]
shade-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
